# simple-calculator-demo

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  allurerc.mjs  index.html  pyproject.toml  pytest.ini  requirements.txt  test_calculator.py  tox.ini
.github/workflows/: ci.yml  claude.yml  codeql.yml  deploy-learning.yml  pr.yml  tests.yml
.rules/: calculator-project.mdc  pre-commit-hook.mdc
10/: index.html
10/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
10/export/: influxDbData.txt  prometheusData.txt
10/widgets/: behaviors.json  duration-trend.json  duration.json  executors.json  retry-trend.json  severity.json  summary.json
11/: index.html
11/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
11/export/: influxDbData.txt  prometheusData.txt
11/history/: history-trend.json  history.json  retry-trend.json
11/widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  severity.json  summary.json
26/: index.html
26/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
26/export/: influxDbData.txt  prometheusData.txt
26/history/: categories-trend.json  duration-trend.json  history.json  retry-trend.json
26/widgets/: executors.json  history-trend.json  severity.json  status-chart.json  summary.json
calculator/: __init__.py  calculator.py
docs/: ALLURE.md  ARCHITECTURE.md  CI-CD.md  E2E-GUIDE.md  STRUCTURE.md  TESTING.md  UV.md  demo-transcript.md
docs/ci-cd/: GITHUB-PAGES.md
docs/learn/: index.html  learn.css
guides/: 01-getting-started.md  06-advanced-features.md  README.md
last-history/: categories-trend.json  history-trend.json  history.json
src/: calculator.py
tests/: __init__.py  test_calculator.py
(+15 files in other folders)
